-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs24, hs25
-
Component/s: hotspot
-
b41
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8018105 | 7u45 | Unassigned | P2 | Closed | Fixed | b01 |
| JDK-8013076 | 7u40 | Unassigned | P2 | Closed | Fixed | b22 |
The method CollectedHeap::ensure_parsability must be called to be able to traverse TLABs during heap inspection.
- backported by
-
JDK-8013076 CollectedHeap::ensure_parsability is not always called during heap inspection
-
- Closed
-
-
JDK-8018105 CollectedHeap::ensure_parsability is not always called during heap inspection
-
- Closed
-
- duplicates
-
JDK-8012474 sun/tools/jmap/Basic.sh test failing since hsx 24-b40 integration on unix OSes
-
- Closed
-