8012102: CollectedHeap::ensure_parsability is not always called during heap inspection Reviewed-by: mgerdin, stefank